# C-_Finale_EX

./: CMakeLists.txt  README.md  main.cpp
controller/account/: AccountController.cpp  AccountController.h
controller/answer/: AnswerController.cpp  AnswerController.h
controller/classess/: ClassessController.cpp  ClassessController.h
controller/exam/: ExamController.cpp  ExamController.h
controller/major/: MajorController.cpp  MajorController.h
controller/person/: PersonController.cpp  PersonController.h
controller/question/: QuestionController.cpp  QuestionController.h
controller/subject/: SubjectController.cpp  SubjectController.h
logger/: Logger.cpp  Logger.h
modal/: Classes.cpp  Classes.h
modal/account/: Account.cpp  Account.h
modal/answer/: Answer.cpp  Answer.h
modal/classess/: Classes.cpp  Classes.h
modal/exam/: Exam.cpp  Exam.h
modal/major/: Major.cpp  Major.h
modal/person/: Person.cpp  Person.h
modal/question/: Question.cpp  Question.h
modal/role/: Role.h
modal/subject/: Subject.cpp  Subject.h
resource/: Resource.h  SortEnum.h
serivce/: ServiceAbstractGeneric.cpp  ServiceAbstractGeneric.h
serivce/account/: AccountService.cpp  AccountService.h
serivce/answer/: AnswerService.cpp  AnswerService.h
serivce/classess/: ClassessService.cpp  ClassessService.h
serivce/exam/: ExamService.cpp  ExamService.h
serivce/major/: MajorService.cpp  MajorService.h
serivce/question/: QuestionService.cpp  QuestionService.h
utils/: Utils.cpp  Utils.h  UtilsGeneric.cpp  UtilsGeneric.h
view/: ApplicationView.cpp  ApplicationView.h
(+16 files in other folders)
